config.toml: changed

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = ""
 languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "Vox Populi"
-theme = "hermit"
+theme = "Vox populi"
 pygmentsCodefences = true
 pygmentsUseClasses = true
 rssLimit = 10
